--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -66,9 +66,11 @@
 	│   └── <a href="../S05-Derivation/Ex-2a-S05-Calcul-derive.pdf">Ex-2a-S05-Calcul-derive.pdf</a><br>
 	└── <a href="../S06-Fonctions-exponentielles/">S06-Fonctions-exponentielles</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Cours-S06-Exponentielles.pdf">Cours-S06-Exponentielles.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Cours-S06-Fonction-Exponentielles.pdf">Cours-S06-Fonction-Exponentielles.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Ex-1a-S06-calculs.pdf">Ex-1a-S06-calculs.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Ex-1b-S06-calculs.pdf">Ex-1b-S06-calculs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="../S06-Fonctions-exponentielles/Ex-2a-S06-variations.pdf">Ex-2a-S06-variations.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Ex-2a-S06-variations.pdf">Ex-2a-S06-variations.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="../S06-Fonctions-exponentielles/fonction_exponentielle_exercices.pdf">fonction_exponentielle_exercices.pdf</a><br>
 	<hr>
 </body>
 </html>
