--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -98,7 +98,9 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="../S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="../S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
 	<hr>
 </body>
 </html>
