--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -25,52 +25,54 @@
 </head>
 <body>
 	<h1>Cours de Maths/Terminale</h1><p>
-	<a href="../">.</a><br>
-	├── <a href="../S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/">S01-Suites-Numériques</a><br>
-	│   ├── <a href="../S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/FA1-recurrence-explicite.pdf">FA1-recurrence-explicite.pdf</a><br>
-	│   ├── <a href="../S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/FA2-Situations-problemes.pdf">FA2-Situations-problemes.pdf</a><br>
-	│   └── <a href="../S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
-	├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/">S02-Probabilités-Conditionnelles</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA1-S02-1-ProbaSimples.pdf">FA1-S02-1-ProbaSimples.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA2-S02-ProbaSimples.pdf">FA2-S02-ProbaSimples.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA3-S02-ProbaCondi-Formule.pdf">FA3-S02-ProbaCondi-Formule.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA4-S02-ProbaCondi-Arbres.pdf">FA4-S02-ProbaCondi-Arbres.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-1.pdf">FA5-S02-ProbaCondi-Arbres-1.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-2.pdf">FA5-S02-ProbaCondi-Arbres-2.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
-	│   ├── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
-	│   └── <a href="../S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
-	├── <a href="../S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/">S03-Suites-Géométriques</a><br>
-	│   ├── <a href="../S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/FA-01-S03-Revisions.pdf">FA-01-S03-Revisions.pdf</a><br>
-	│   ├── <a href="../S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_crs - Suites num%FFFFFFC3%FFFFFFA9riques.pdf">STI2D_TN9_crs - Suites numériques.pdf</a><br>
-	│   ├── <a href="../S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_ex1a - Suites g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques %28exercices de base%29.pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
-	│   ├── <a href="../S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_ex1b - Suites g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques et pourcentages.pdf">STI2D_TN9_ex1b - Suites géométriques et pourcentages.pdf</a><br>
-	│   └── <a href="../S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_ex3a - Bilan.pdf">STI2D_TN9_ex3a - Bilan.pdf</a><br>
-	├── <a href="../S04-Second-degre/">S04-Second-degre</a><br>
-	│   ├── <a href="../S04-Second-degre/11.FA-01-S04-Evaluation-fonction.pdf">11.FA-01-S04-Evaluation-fonction.pdf</a><br>
-	│   ├── <a href="../S04-Second-degre/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
-	│   ├── <a href="../S04-Second-degre/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
-	│   ├── <a href="../S04-Second-degre/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
-	│   └── <a href="../S04-Second-degre/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
-	├── <a href="../S05-Derivation/">S05-Derivation</a><br>
-	│   ├── <a href="../S05-Derivation/1. Nombre d%FFFFFFC3%FFFFFFA9riv%FFFFFFC3%FFFFFFA9 et tangente.pdf">1. Nombre dérivé et tangente.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/3. Fonctions d%FFFFFFC3%FFFFFFA9riv%FFFFFFC3%FFFFFFA9es.pdf">3. Fonctions dérivées.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/Cours-S05-Derivation.pdf">Cours-S05-Derivation.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/DS-1a-S05-evaluation-nombre-derive.pdf">DS-1a-S05-evaluation-nombre-derive.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/Ex-1a-S05-Taux-daccroissement.pdf">Ex-1a-S05-Taux-daccroissement.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/Ex-1b-S05-Nombre-derive_01.pdf">Ex-1b-S05-Nombre-derive_01.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/Ex-1b-S05-Nombre-derive_02.pdf">Ex-1b-S05-Nombre-derive_02.pdf</a><br>
-	│   ├── <a href="../S05-Derivation/Ex-1b-S05-Nombre-derive.pdf">Ex-1b-S05-Nombre-derive.pdf</a><br>
-	│   └── <a href="../S05-Derivation/Ex-2a-S05-Calcul-derive.pdf">Ex-2a-S05-Calcul-derive.pdf</a><br>
-	└── <a href="../S06-Fonctions-exponentielles/">S06-Fonctions-exponentielles</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Cours-S06-Exponentielles.pdf">Cours-S06-Exponentielles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Cours-S06-Fonction-Exponentielles.pdf">Cours-S06-Fonction-Exponentielles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Ex-1a-S06-calculs.pdf">Ex-1a-S06-calculs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Ex-1b-S06-calculs.pdf">Ex-1b-S06-calculs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S06-Fonctions-exponentielles/Ex-2a-S06-variations.pdf">Ex-2a-S06-variations.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="../S06-Fonctions-exponentielles/fonction_exponentielle_exercices.pdf">fonction_exponentielle_exercices.pdf</a><br>
+	<a href="https://outerovitch-maths.github.io/">↰</a><br>
+	├── <a href="././S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/">S01-Suites-Numériques</a><br>
+	│   ├── <a href="././S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/FA1-recurrence-explicite.pdf">FA1-recurrence-explicite.pdf</a><br>
+	│   ├── <a href="././S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/FA2-Situations-problemes.pdf">FA2-Situations-problemes.pdf</a><br>
+	│   └── <a href="././S01-Suites-Num%FFFFFFC3%FFFFFFA9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
+	├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/">S02-Probabilités-Conditionnelles</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA1-S02-1-ProbaSimples.pdf">FA1-S02-1-ProbaSimples.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA2-S02-ProbaSimples.pdf">FA2-S02-ProbaSimples.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA3-S02-ProbaCondi-Formule.pdf">FA3-S02-ProbaCondi-Formule.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA4-S02-ProbaCondi-Arbres.pdf">FA4-S02-ProbaCondi-Arbres.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-1.pdf">FA5-S02-ProbaCondi-Arbres-1.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-2.pdf">FA5-S02-ProbaCondi-Arbres-2.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
+	│   └── <a href="././S02-Probabilit%FFFFFFC3%FFFFFFA9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
+	├── <a href="././S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/">S03-Suites-Géométriques</a><br>
+	│   ├── <a href="././S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/FA-01-S03-Revisions.pdf">FA-01-S03-Revisions.pdf</a><br>
+	│   ├── <a href="././S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_crs - Suites num%FFFFFFC3%FFFFFFA9riques.pdf">STI2D_TN9_crs - Suites numériques.pdf</a><br>
+	│   ├── <a href="././S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_ex1a - Suites g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques %28exercices de base%29.pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
+	│   ├── <a href="././S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_ex1b - Suites g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques et pourcentages.pdf">STI2D_TN9_ex1b - Suites géométriques et pourcentages.pdf</a><br>
+	│   └── <a href="././S03-Suites-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques/STI2D_TN9_ex3a - Bilan.pdf">STI2D_TN9_ex3a - Bilan.pdf</a><br>
+	├── <a href="././S04-Second-degre/">S04-Second-degre</a><br>
+	│   ├── <a href="././S04-Second-degre/11.FA-01-S04-Evaluation-fonction.pdf">11.FA-01-S04-Evaluation-fonction.pdf</a><br>
+	│   ├── <a href="././S04-Second-degre/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
+	│   ├── <a href="././S04-Second-degre/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
+	│   ├── <a href="././S04-Second-degre/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
+	│   └── <a href="././S04-Second-degre/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
+	├── <a href="././S05-Derivation/">S05-Derivation</a><br>
+	│   ├── <a href="././S05-Derivation/1. Nombre d%FFFFFFC3%FFFFFFA9riv%FFFFFFC3%FFFFFFA9 et tangente.pdf">1. Nombre dérivé et tangente.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/3. Fonctions d%FFFFFFC3%FFFFFFA9riv%FFFFFFC3%FFFFFFA9es.pdf">3. Fonctions dérivées.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/Cours-S05-Derivation.pdf">Cours-S05-Derivation.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/DS-1a-S05-evaluation-nombre-derive.pdf">DS-1a-S05-evaluation-nombre-derive.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/Ex-1a-S05-Taux-daccroissement.pdf">Ex-1a-S05-Taux-daccroissement.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_01.pdf">Ex-1b-S05-Nombre-derive_01.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_02.pdf">Ex-1b-S05-Nombre-derive_02.pdf</a><br>
+	│   ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive.pdf">Ex-1b-S05-Nombre-derive.pdf</a><br>
+	│   └── <a href="././S05-Derivation/Ex-2a-S05-Calcul-derive.pdf">Ex-2a-S05-Calcul-derive.pdf</a><br>
+	└── <a href="././S06-Fonctions-exponentielles/">S06-Fonctions-exponentielles</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Cours-S06-Exponentielles.pdf">Cours-S06-Exponentielles.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Cours-S06-Fonction-Exponentielles.pdf">Cours-S06-Fonction-Exponentielles.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-1a-S06-calculs.pdf">Ex-1a-S06-calculs.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-1b-S06-calculs.pdf">Ex-1b-S06-calculs.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-2a-S06-variations.pdf">Ex-2a-S06-variations.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/ExpoTS.pdf">ExpoTS.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/fonction_exponentielle_exercices.pdf">fonction_exponentielle_exercices.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Fonctions-exponentielles/resume_cours_primitives_integration.pdf">resume_cours_primitives_integration.pdf</a><br>
 	<hr>
 </body>
 </html>
