--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -25,82 +25,82 @@
 </head>
 <body>
 	<h1>Cours de Maths/Sixieme</h1><p>
-	<a href="../">.</a><br>
-	├── <a href="../S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
-	│   ├── <a href="../S01-Numeration-entiere/FA-S01-6-additions pos%FFFFFFC3%FFFFFFA9es.pdf">FA-S01-6-additions posées.pdf</a><br>
-	│   └── <a href="../S01-Numeration-entiere/FM-S01-6-Num%FFFFFFC3%FFFFFFA9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
-	├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Géométrie</a><br>
-	│   ├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
-	│   ├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
-	│   ├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
-	│   ├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
-	│   ├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
-	│   ├── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
-	│   └── <a href="../S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
-	├── <a href="../S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
-	│   ├── <a href="../S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
-	│   ├── <a href="../S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
-	│   ├── <a href="../S03-Operations-decimaux/FA-03-S03-Additions-decimales-trou.pdf">FA-03-S03-Additions-decimales-trou.pdf</a><br>
-	│   ├── <a href="../S03-Operations-decimaux/FA-03-S03-Soustractions-decimales-trou.pdf">FA-03-S03-Soustractions-decimales-trou.pdf</a><br>
-	│   ├── <a href="../S03-Operations-decimaux/FA-05-S03-Problemes-1.pdf">FA-05-S03-Problemes-1.pdf</a><br>
-	│   └── <a href="../S03-Operations-decimaux/FM-S03-Op%FFFFFFC3%FFFFFFA9rations-sur-les-nombres-d%FFFFFFC3%FFFFFFA9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
-	├── <a href="../S04-Cercle/">S04-Cercle</a><br>
-	│   ├── <a href="../S04-Cercle/00.FM-S04-Cercles.pdf">00.FM-S04-Cercles.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/11.FA-01-S04-Vocabulaire-cercle.pdf">11.FA-01-S04-Vocabulaire-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/12.FA-02-S04-Vocabulaire-cercle.pdf">12.FA-02-S04-Vocabulaire-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/13.0.FA-03-S04-Proprietes-cercle.pdf">13.0.FA-03-S04-Proprietes-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/13.1.CORRECTION-FA-03-S04-Proprietes-cercle.pdf">13.1.CORRECTION-FA-03-S04-Proprietes-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/14.FA-04-S04-Tracer-cercle.pdf.pdf">14.FA-04-S04-Tracer-cercle.pdf.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/15.0.FA-05-S04-Tracer-cercle.pdf">15.0.FA-05-S04-Tracer-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/15.1.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.1.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/16.FA-06-S04-Tracer-Arcs.pdf">16.FA-06-S04-Tracer-Arcs.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/19.FA-09-S04-Programmes-de-constructions.pdf">19.FA-09-S04-Programmes-de-constructions.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/20.Activit%FFFFFFC3%FFFFFFA9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
-	│   ├── <a href="../S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
-	│   └── <a href="../S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
-	├── <a href="../S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
-	│   ├── <a href="../S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
-	│   └── <a href="../S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
-	├── <a href="../S06-Perimetres-Aires/">S06-Perimetres-Aires</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-4a-S06-Aires.pdf">Ex-4a-S06-Aires.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-4b-S06-Aires-Figures.pdf">Ex-4b-S06-Aires-Figures.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-4c-S06-Aires-Figures.pdf">Ex-4c-S06-Aires-Figures.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-5a-S06-Aires.pdf">Ex-5a-S06-Aires.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-5b-S06-Aires.pdf">Ex-5b-S06-Aires.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-6a-S06-Aires-Formules.pdf">Ex-6a-S06-Aires-Formules.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
-	│   ├── <a href="../S06-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
-	│   └── <a href="../S06-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
-	└── <a href="../S07-Multiplications-Divisions/">S07-Multiplications-Divisions</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/mathsenligne/">mathsenligne</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="../S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="../S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
+	<a href="https://outerovitch-maths.github.io/">↰</a><br>
+	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions pos%FFFFFFC3%FFFFFFA9es.pdf">FA-S01-6-additions posées.pdf</a><br>
+	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%FFFFFFC3%FFFFFFA9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
+	├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Géométrie</a><br>
+	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
+	│   └── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
+	├── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-03-S03-Additions-decimales-trou.pdf">FA-03-S03-Additions-decimales-trou.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-03-S03-Soustractions-decimales-trou.pdf">FA-03-S03-Soustractions-decimales-trou.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-05-S03-Problemes-1.pdf">FA-05-S03-Problemes-1.pdf</a><br>
+	│   └── <a href="././S03-Operations-decimaux/FM-S03-Op%FFFFFFC3%FFFFFFA9rations-sur-les-nombres-d%FFFFFFC3%FFFFFFA9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
+	├── <a href="././S04-Cercle/">S04-Cercle</a><br>
+	│   ├── <a href="././S04-Cercle/00.FM-S04-Cercles.pdf">00.FM-S04-Cercles.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/11.FA-01-S04-Vocabulaire-cercle.pdf">11.FA-01-S04-Vocabulaire-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/12.FA-02-S04-Vocabulaire-cercle.pdf">12.FA-02-S04-Vocabulaire-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/13.0.FA-03-S04-Proprietes-cercle.pdf">13.0.FA-03-S04-Proprietes-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/13.1.CORRECTION-FA-03-S04-Proprietes-cercle.pdf">13.1.CORRECTION-FA-03-S04-Proprietes-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/14.FA-04-S04-Tracer-cercle.pdf.pdf">14.FA-04-S04-Tracer-cercle.pdf.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/15.0.FA-05-S04-Tracer-cercle.pdf">15.0.FA-05-S04-Tracer-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/15.1.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.1.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/16.FA-06-S04-Tracer-Arcs.pdf">16.FA-06-S04-Tracer-Arcs.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/19.FA-09-S04-Programmes-de-constructions.pdf">19.FA-09-S04-Programmes-de-constructions.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/20.Activit%FFFFFFC3%FFFFFFA9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
+	│   └── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
+	├── <a href="././S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
+	│   └── <a href="././S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
+	├── <a href="././S06-Perimetres-Aires/">S06-Perimetres-Aires</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-4a-S06-Aires.pdf">Ex-4a-S06-Aires.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-4b-S06-Aires-Figures.pdf">Ex-4b-S06-Aires-Figures.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-4c-S06-Aires-Figures.pdf">Ex-4c-S06-Aires-Figures.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-5a-S06-Aires.pdf">Ex-5a-S06-Aires.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-5b-S06-Aires.pdf">Ex-5b-S06-Aires.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-6a-S06-Aires-Formules.pdf">Ex-6a-S06-Aires-Formules.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
+	│   ├── <a href="././S06-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
+	│   └── <a href="././S06-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
+	└── <a href="././S07-Multiplications-Divisions/">S07-Multiplications-Divisions</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/mathsenligne/">mathsenligne</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
 	<hr>
 </body>
 </html>
