--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -75,16 +75,18 @@
 	│   ├── <a href="././S04-Trigonometrie/30-Exercices-trigo.pdf">30-Exercices-trigo.pdf</a><br>
 	│   ├── <a href="././S04-Trigonometrie/90.Formulaire_trigonometrie.pdf">90.Formulaire_trigonometrie.pdf</a><br>
 	│   └── <a href="././S04-Trigonometrie/tikz.pdf">tikz.pdf</a><br>
-	└── <a href="././S05-Suites/">S05-Suites</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-Formules-Suites.pdf">Cours-Formules-Suites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-2a-S05-Suites-g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques.pdf">Ex-2a-S05-Suites-géométriques.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-3a-S05-Determiner-Raison.pdf">Ex-3a-S05-Determiner-Raison.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-4a-S05-Somme-Arithm%FFFFFFC3%FFFFFFA9tique.pdf">Ex-4a-S05-Somme-Arithmétique.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-4b-S05-Somme-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trique.pdf">Ex-4b-S05-Somme-Géométrique.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/Ex-5a-S05-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-5a-S05-Problèmes.pdf</a><br>
+	├── <a href="././S05-Suites/">S05-Suites</a><br>
+	│   ├── <a href="././S05-Suites/Cours-Formules-Suites.pdf">Cours-Formules-Suites.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Ex-2a-S05-Suites-g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques.pdf">Ex-2a-S05-Suites-géométriques.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Ex-3a-S05-Determiner-Raison.pdf">Ex-3a-S05-Determiner-Raison.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Ex-4a-S05-Somme-Arithm%FFFFFFC3%FFFFFFA9tique.pdf">Ex-4a-S05-Somme-Arithmétique.pdf</a><br>
+	│   ├── <a href="././S05-Suites/Ex-4b-S05-Somme-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trique.pdf">Ex-4b-S05-Somme-Géométrique.pdf</a><br>
+	│   └── <a href="././S05-Suites/Ex-5a-S05-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-5a-S05-Problèmes.pdf</a><br>
+	└── <a href="././S06-Produit-Scalaire/">S06-Produit-Scalaire</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.pdf">Ex-2a-S06-Produit-Scalaire-Simple.pdf</a><br>
 	<hr>
 </body>
 </html>
