--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -86,6 +86,7 @@
 	│   └── <a href="././S05-Symetrie-Centrale/feuille_seyes-le_blog_de_fabrice_arnaud.pdf">feuille_seyes-le_blog_de_fabrice_arnaud.pdf</a><br>
 	├── <a href="././S06-Relatifs-II-Operations/">S06-Relatifs-II-Operations</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Cours-S06-Operation-sur-les-relatifs.pdf">Cours-S06-Operation-sur-les-relatifs.pdf</a><br>
+	│   ├── <a href="././S06-Relatifs-II-Operations/DS-1-S06-Relatif.pdf">DS-1-S06-Relatif.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-1a-Additions.pdf">Ex-1a-Additions.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-1b-Additions.pdf">Ex-1b-Additions.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-1-S06-test.pdf">Ex-1-S06-test.pdf</a><br>
