--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -78,6 +78,7 @@
 	├── <a href="././S05-Suites/">S05-Suites</a><br>
 	│   ├── <a href="././S05-Suites/Cours-Formules-Suites.pdf">Cours-Formules-Suites.pdf</a><br>
 	│   ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
+	│   ├── <a href="././S05-Suites/DS-1-S05-Suites.pdf">DS-1-S05-Suites.pdf</a><br>
 	│   ├── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
 	│   ├── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
 	│   ├── <a href="././S05-Suites/Ex-2a-S05-Suites-g%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9triques.pdf">Ex-2a-S05-Suites-géométriques.pdf</a><br>
