--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -91,17 +91,28 @@
 	│   ├── <a href="././S06-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
 	│   ├── <a href="././S06-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
 	│   └── <a href="././S06-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
-	└── <a href="././S07-Multiplications-Divisions/">S07-Multiplications-Divisions</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/mathsenligne/">mathsenligne</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
+	├── <a href="././S07-Multiplications-Divisions/">S07-Multiplications-Divisions</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/mathsenligne/">mathsenligne</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/DS-1-S07-Multiplication-Division.pdf">DS-1-S07-Multiplication-Division.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
+	│   ├── <a href="././S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
+	│   └── <a href="././S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
+	└── <a href="././S08-Rapporteur/">S08-Rapporteur</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/cours-Rapporteur.pdf">cours-Rapporteur.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/FA1-5-S05.pdf">FA1-5-S05.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/FA1-6-S17.pdf">FA1-6-S17.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_94.pdf">pg_94.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_95.pdf">pg_95.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_96.pdf">pg_96.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_97.pdf">pg_97.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_98.pdf">pg_98.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Rapporteur/pg_99.pdf">pg_99.pdf</a><br>
 	<hr>
 </body>
 </html>
