--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -87,6 +87,7 @@
 	│   ├── <a href="././S05-Suites/Ex-4b-S05-Somme-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trique.pdf">Ex-4b-S05-Somme-Géométrique.pdf</a><br>
 	│   └── <a href="././S05-Suites/Ex-5a-S05-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-5a-S05-Problèmes.pdf</a><br>
 	└── <a href="././S06-Produit-Scalaire/">S06-Produit-Scalaire</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Produit-Scalaire/Ex-1a-S06-Rappels-Vecteurs.pdf">Ex-1a-S06-Rappels-Vecteurs.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.pdf">Ex-2a-S06-Produit-Scalaire-Simple.pdf</a><br>
 	<hr>
 </body>
