--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -87,6 +87,8 @@
 	├── <a href="././S06-Relatifs-II-Operations/">S06-Relatifs-II-Operations</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Cours-S06-Operation-sur-les-relatifs.pdf">Cours-S06-Operation-sur-les-relatifs.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/DS-1-S06-Relatif.pdf">DS-1-S06-Relatif.pdf</a><br>
+	│   ├── <a href="././S06-Relatifs-II-Operations/DS-2-S06-Relatif-Remediation.pdf">DS-2-S06-Relatif-Remediation.pdf</a><br>
+	│   ├── <a href="././S06-Relatifs-II-Operations/DS-3-Relatif-Correction.pdf">DS-3-Relatif-Correction.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-1a-Additions.pdf">Ex-1a-Additions.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-1b-Additions.pdf">Ex-1b-Additions.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-2a-Soustractions.pdf">Ex-2a-Soustractions.pdf</a><br>
