--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -64,16 +64,27 @@
 	│   ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_02.pdf">Ex-1b-S05-Nombre-derive_02.pdf</a><br>
 	│   ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive.pdf">Ex-1b-S05-Nombre-derive.pdf</a><br>
 	│   └── <a href="././S05-Derivation/Ex-2a-S05-Calcul-derive.pdf">Ex-2a-S05-Calcul-derive.pdf</a><br>
-	└── <a href="././S06-Fonctions-exponentielles/">S06-Fonctions-exponentielles</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Cours-S06-Exponentielles.pdf">Cours-S06-Exponentielles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Cours-S06-Fonction-Exponentielles.pdf">Cours-S06-Fonction-Exponentielles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-1a-S06-calculs.pdf">Ex-1a-S06-calculs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-1b-S06-calculs.pdf">Ex-1b-S06-calculs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-2a-S06-variations.pdf">Ex-2a-S06-variations.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/Ex-3a-S06-Exponentielle.pdf">Ex-3a-S06-Exponentielle.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/ExpoTS.pdf">ExpoTS.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Fonctions-exponentielles/fonction_exponentielle_exercices.pdf">fonction_exponentielle_exercices.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Fonctions-exponentielles/resume_cours_primitives_integration.pdf">resume_cours_primitives_integration.pdf</a><br>
+	├── <a href="././S06-Fonctions-exponentielles/">S06-Fonctions-exponentielles</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Cours-S06-Exponentielles.pdf">Cours-S06-Exponentielles.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Cours-S06-Fonction-Exponentielles.pdf">Cours-S06-Fonction-Exponentielles.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Ex-1a-S06-calculs.pdf">Ex-1a-S06-calculs.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Ex-1b-S06-calculs.pdf">Ex-1b-S06-calculs.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Ex-2a-S06-variations.pdf">Ex-2a-S06-variations.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Ex-3a-S06-Exponentielle.pdf">Ex-3a-S06-Exponentielle.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/Ex-3b-S06-Exponentielle-derivees.pdf">Ex-3b-S06-Exponentielle-derivees.pdf</a><br>
+	│   ├── <a href="././S06-Fonctions-exponentielles/ExpoTS.pdf">ExpoTS.pdf</a><br>
+	│   └── <a href="././S06-Fonctions-exponentielles/fonction_exponentielle_exercices.pdf">fonction_exponentielle_exercices.pdf</a><br>
+	├── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/">S07-Primitive-Intégration</a><br>
+	│   └── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/resume_cours_primitives_integration.pdf">resume_cours_primitives_integration.pdf</a><br>
+	└── <a href="././S08-Statistiques/">S08-Statistiques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_02.pdf">Ex-1-S08-Rappels_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_03.pdf">Ex-1-S08-Rappels_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels.pdf">Ex-1-S08-Rappels.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
 	<hr>
 </body>
 </html>
