--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -93,20 +93,37 @@
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-1b-Additions.pdf">Ex-1b-Additions.pdf</a><br>
 	│   ├── <a href="././S06-Relatifs-II-Operations/Ex-2a-Soustractions.pdf">Ex-2a-Soustractions.pdf</a><br>
 	│   └── <a href="././S06-Relatifs-II-Operations/Ex-2b-S06-Soustractions.pdf">Ex-2b-S06-Soustractions.pdf</a><br>
-	└── <a href="././S07-Parallelogrammes/">S07-Parallelogrammes</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Act-1a-Symetrie-figures.pdf">Act-1a-Symetrie-figures.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Act-1b-Centre-Symetrie.pdf">Act-1b-Centre-Symetrie.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Act-2a-Proprietes.pdf">Act-2a-Proprietes.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Cours-Revisions-Parallelogrammes.pdf">Cours-Revisions-Parallelogrammes.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Cours-S07-Parall%FFFFFFC3%FFFFFFA9logrammes.pdf">Cours-S07-Parallélogrammes.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-1a-Nommer.pdf">Ex-1a-Nommer.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-2a-Reconnaitre.pdf">Ex-2a-Reconnaitre.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-3a-Centre-de-Symetrie.pdf">Ex-3a-Centre-de-Symetrie.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-4a-Construction.pdf">Ex-4a-Construction.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-4b-Construction.pdf">Ex-4b-Construction.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-4c-Construction-Compas.pdf">Ex-4c-Construction-Compas.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Parallelogrammes/Ex-5a-Reproduire.pdf">Ex-5a-Reproduire.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Parallelogrammes/Ex-6a-Demonstration.pdf">Ex-6a-Demonstration.pdf</a><br>
+	├── <a href="././S07-Parallelogrammes/">S07-Parallelogrammes</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Act-1a-Symetrie-figures.pdf">Act-1a-Symetrie-figures.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Act-1b-Centre-Symetrie.pdf">Act-1b-Centre-Symetrie.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Act-2a-Proprietes.pdf">Act-2a-Proprietes.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Cours-Revisions-Parallelogrammes.pdf">Cours-Revisions-Parallelogrammes.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Cours-S07-Parall%FFFFFFC3%FFFFFFA9logrammes.pdf">Cours-S07-Parallélogrammes.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-1a-Nommer.pdf">Ex-1a-Nommer.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-2a-Reconnaitre.pdf">Ex-2a-Reconnaitre.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-3a-Centre-de-Symetrie.pdf">Ex-3a-Centre-de-Symetrie.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-4a-Construction.pdf">Ex-4a-Construction.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-4b-Construction.pdf">Ex-4b-Construction.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-4c-Construction-Compas.pdf">Ex-4c-Construction-Compas.pdf</a><br>
+	│   ├── <a href="././S07-Parallelogrammes/Ex-5a-Reproduire.pdf">Ex-5a-Reproduire.pdf</a><br>
+	│   └── <a href="././S07-Parallelogrammes/Ex-6a-Demonstration.pdf">Ex-6a-Demonstration.pdf</a><br>
+	└── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/">S08-Proportionnalité</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Cours-S08-Proportionnalite.pdf">Cours-S08-Proportionnalite.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-1-S08-Reconnaitre-une-situation_01.pdf">Ex-1-S08-Reconnaitre-une-situation_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-1-S08-Reconnaitre-une-situation_02.pdf">Ex-1-S08-Reconnaitre-une-situation_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-1-S08-Reconnaitre-une-situation_03.pdf">Ex-1-S08-Reconnaitre-une-situation_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-2-S08-Calcul-de-Coefficient_01.pdf">Ex-2-S08-Calcul-de-Coefficient_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-2-S08-Calcul-de-Coefficient_02.pdf">Ex-2-S08-Calcul-de-Coefficient_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-3-S08-Passage-a-unite_01.pdf">Ex-3-S08-Passage-a-unite_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-3-S08-Passage-a-unite_02.pdf">Ex-3-S08-Passage-a-unite_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4a-S08-Produit-en-croix_01.pdf">Ex-4a-S08-Produit-en-croix_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4a-S08-Produit-en-croix_02.pdf">Ex-4a-S08-Produit-en-croix_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4b-S08-Produit-en-croix_01.pdf">Ex-4b-S08-Produit-en-croix_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4b-S08-Produit-en-croix_02.pdf">Ex-4b-S08-Produit-en-croix_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4b-S08-Produit-en-croix_03.pdf">Ex-4b-S08-Produit-en-croix_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-5-S08-Problemes_01.pdf">Ex-5-S08-Problemes_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-5-S08-Problemes_02.pdf">Ex-5-S08-Problemes_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-5-S08-Problemes_03.pdf">Ex-5-S08-Problemes_03.pdf</a><br>
 	<hr>
 </body>
 </html>
