--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -77,6 +77,7 @@
 	├── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/">S07-Primitive-Intégration</a><br>
 	│   └── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/resume_cours_primitives_integration.pdf">resume_cours_primitives_integration.pdf</a><br>
 	└── <a href="././S08-Statistiques/">S08-Statistiques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cours-S08-Stats.pdf">Cours-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
