--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -107,23 +107,23 @@
 	│   ├── <a href="././S07-Parallelogrammes/Ex-4c-Construction-Compas.pdf">Ex-4c-Construction-Compas.pdf</a><br>
 	│   ├── <a href="././S07-Parallelogrammes/Ex-5a-Reproduire.pdf">Ex-5a-Reproduire.pdf</a><br>
 	│   └── <a href="././S07-Parallelogrammes/Ex-6a-Demonstration.pdf">Ex-6a-Demonstration.pdf</a><br>
-	└── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/">S08-Proportionnalité</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Cours-S08-Proportionnalite.pdf">Cours-S08-Proportionnalite.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-1-S08-Reconnaitre-une-situation_01.pdf">Ex-1-S08-Reconnaitre-une-situation_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-1-S08-Reconnaitre-une-situation_02.pdf">Ex-1-S08-Reconnaitre-une-situation_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-1-S08-Reconnaitre-une-situation_03.pdf">Ex-1-S08-Reconnaitre-une-situation_03.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-2-S08-Calcul-de-Coefficient_01.pdf">Ex-2-S08-Calcul-de-Coefficient_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-2-S08-Calcul-de-Coefficient_02.pdf">Ex-2-S08-Calcul-de-Coefficient_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-3-S08-Passage-a-unite_01.pdf">Ex-3-S08-Passage-a-unite_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-3-S08-Passage-a-unite_02.pdf">Ex-3-S08-Passage-a-unite_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4a-S08-Produit-en-croix_01.pdf">Ex-4a-S08-Produit-en-croix_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4a-S08-Produit-en-croix_02.pdf">Ex-4a-S08-Produit-en-croix_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4b-S08-Produit-en-croix_01.pdf">Ex-4b-S08-Produit-en-croix_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4b-S08-Produit-en-croix_02.pdf">Ex-4b-S08-Produit-en-croix_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-4b-S08-Produit-en-croix_03.pdf">Ex-4b-S08-Produit-en-croix_03.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-5-S08-Problemes_01.pdf">Ex-5-S08-Problemes_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-5-S08-Problemes_02.pdf">Ex-5-S08-Problemes_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Proportionnalit%FFFFFFC3%FFFFFFA9/Ex-5-S08-Problemes_03.pdf">Ex-5-S08-Problemes_03.pdf</a><br>
+	└── <a href="././S08-Proportionnalite/">S08-Proportionnalite</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Cours-S08-Proportionnalite.pdf">Cours-S08-Proportionnalite.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-1-S08-Reconnaitre-une-situation_01.pdf">Ex-1-S08-Reconnaitre-une-situation_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-1-S08-Reconnaitre-une-situation_02.pdf">Ex-1-S08-Reconnaitre-une-situation_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-1-S08-Reconnaitre-une-situation_03.pdf">Ex-1-S08-Reconnaitre-une-situation_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-2-S08-Calcul-de-Coefficient_01.pdf">Ex-2-S08-Calcul-de-Coefficient_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-2-S08-Calcul-de-Coefficient_02.pdf">Ex-2-S08-Calcul-de-Coefficient_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-3-S08-Passage-a-unite_01.pdf">Ex-3-S08-Passage-a-unite_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-3-S08-Passage-a-unite_02.pdf">Ex-3-S08-Passage-a-unite_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-4a-S08-Produit-en-croix_01.pdf">Ex-4a-S08-Produit-en-croix_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-4a-S08-Produit-en-croix_02.pdf">Ex-4a-S08-Produit-en-croix_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-4b-S08-Produit-en-croix_01.pdf">Ex-4b-S08-Produit-en-croix_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-4b-S08-Produit-en-croix_02.pdf">Ex-4b-S08-Produit-en-croix_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-4b-S08-Produit-en-croix_03.pdf">Ex-4b-S08-Produit-en-croix_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_01.pdf">Ex-5-S08-Problemes_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_02.pdf">Ex-5-S08-Problemes_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_03.pdf">Ex-5-S08-Problemes_03.pdf</a><br>
 	<hr>
 </body>
 </html>
