--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -79,13 +79,18 @@
 	└── <a href="././S08-Statistiques/">S08-Statistiques</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cours-S08-Stats.pdf">Cours-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS-1-S08-Stats.pdf">DS-1-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_02.pdf">Ex-1-S08-Rappels_02.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_03.pdf">Ex-1-S08-Rappels_03.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels.pdf">Ex-1-S08-Rappels.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_01.pdf">Ex-2a-S08-Point-moyen_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_02.pdf">Ex-2a-S08-Point-moyen_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen.pdf">Ex-2a-S08-Point-moyen.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/recap mvt intra.pdf">recap mvt intra.pdf</a><br>
 	<hr>
 </body>
 </html>
