--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -89,8 +89,7 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_02.pdf">Ex-2a-S08-Point-moyen_02.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen.pdf">Ex-2a-S08-Point-moyen.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/recap mvt intra.pdf">recap mvt intra.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
 	<hr>
 </body>
 </html>
