--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -106,6 +106,7 @@
 	└── <a href="././S08-Rapporteur/">S08-Rapporteur</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/cours-Rapporteur.pdf">cours-Rapporteur.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/Cours-S08-Rapporteurs.pdf">Cours-S08-Rapporteurs.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/DS-Formative-S08-Angles.pdf">DS-Formative-S08-Angles.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/FA1-5-S05.pdf">FA1-5-S05.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/FA1-6-S17.pdf">FA1-6-S17.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_94.pdf">pg_94.pdf</a><br>
