--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -88,6 +88,9 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_01.pdf">Ex-2a-S08-Point-moyen_01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_02.pdf">Ex-2a-S08-Point-moyen_02.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen.pdf">Ex-2a-S08-Point-moyen.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/%23Ex-2a-S08-Point-moyen.tex%23">#Ex-2a-S08-Point-moyen.tex#</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-3a-S08-Covariance.pdf">Ex-3a-S08-Covariance.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-3b-S08-Variance-ecart-type.pdf">Ex-3b-S08-Variance-ecart-type.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
 	<hr>
