--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -96,7 +96,9 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Cours-Second-Degre-II.pdf">Cours-Second-Degre-II.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Ex-2a-S07-Signe.pdf">Ex-2a-S07-Signe.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Second-Degre-II/Ex-3a-S07-Inequation.pdf">Ex-3a-S07-Inequation.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Ex-3a-S07-Inequation.pdf">Ex-3a-S07-Inequation.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Ex-4a-S07-problemes.pdf">Ex-4a-S07-problemes.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Second-Degre-II/exercice second degr%FFFFFFC3%FFFFFFA9.png">exercice second degré.png</a><br>
 	<hr>
 </body>
 </html>
